# moonshine-tts

./: .gitattributes  .gitignore  CMakeLists.txt  moonshine-tts.cpp  piper-tts.cpp
cmake/: moonshine-g2p-onnxruntime.cmake  moonshine-tts-onnxruntime.cmake
data/: README.md
data/ar_msa/: README.md  dict.tsv
data/ar_msa/arabertv02_tashkeel_fadel_onnx/: meta.json  model.onnx  tokenizer_config.json
data/ar_msa/piper-voices/: ar_JO-kareem-low.onnx  ar_JO-kareem-low.onnx.json  ar_JO-kareem-medium.onnx  ar_JO-kareem-medium.onnx.json
data/de/: README.md  dict.tsv
data/de/piper-voices/: de_DE-eva_k-x_low.onnx  de_DE-eva_k-x_low.onnx.json  de_DE-karlsson-low.onnx  de_DE-karlsson-low.onnx.json  de_DE-kerstin-low.onnx  de_DE-kerstin-low.onnx.json  de_DE-mls-medium.onnx  de_DE-mls-medium.onnx.json  de_DE-pavoque-low.onnx  de_DE-pavoque-low.onnx.json  de_DE-ramona-low.onnx  de_DE-ramona-low.onnx.json  de_DE-thorsten-high.onnx  de_DE-thorsten-high.onnx.json  de_DE-thorsten-low.onnx  de_DE-thorsten-low.onnx.json  de_DE-thorsten-medium.onnx  de_DE-thorsten-medium.onnx.json  de_DE-thorsten_emotional-medium.onnx  de_DE-thorsten_emotional-medium.onnx.json
data/en_gb/piper-voices/: en_GB-alan-low.onnx  en_GB-alan-low.onnx.json  en_GB-alan-medium.onnx  en_GB-alba-medium.onnx  en_GB-aru-medium.onnx  en_GB-aru-medium.onnx.json  en_GB-cori-high.onnx  en_GB-cori-high.onnx.json  en_GB-cori-medium.onnx  en_GB-jenny_dioco-medium.onnx  en_GB-northern_english_male-medium.onnx  en_GB-semaine-medium.onnx  en_GB-semaine-medium.onnx.json  en_GB-southern_english_female-low.onnx  en_GB-vctk-medium.onnx
data/en_us/: README.md  dict_filtered_heteronyms.tsv  g2p-config.json
data/en_us/heteronym/: homograph_index.json  model.onnx  onnx-config.json
data/en_us/oov/: onnx-config.json
data/en_us/piper-voices/: en_US-amy-low.onnx  en_US-amy-low.onnx.json  en_US-arctic-medium.onnx  (+41 more)
data/fr/: README.md  dict.tsv
data/hi/: README.md  dict.tsv
data/it/: README.md  dict.tsv
data/ja/: README.md  dict.tsv
data/ko/: README.md  dict.tsv
data/kokoro/: README.md  config.json  model.onnx
data/nl/: README.md  dict.tsv
data/pt_br/: README.md  dict.tsv
data/pt_pt/: README.md  dict.tsv
data/ru/: README.md  dict.tsv
data/vi/: README.md  dict.tsv
data/zh_hans/: README.md  dict.tsv
include/moonshine-g2p/: builtin-cpp-data-root.h  cmudict-tsv.h  constants.h  g2p-word-log.h  ipa-postprocess.h  japanese-kana-to-ipa.h  japanese-onnx-g2p.h  japanese-tok-pos-onnx.h  json-config.h  korean-tok-pos-onnx.h  moonshine-g2p-options.h  moonshine-g2p.h  moonshine-onnx-g2p.h  moonshine-tts.h  onnx-g2p-models.h  rule-based-g2p-factory.h  rule-based-g2p.h  utf8-utils.h
include/moonshine_g2p/: cmudict_tsv.hpp  constants.hpp  g2p_word_log.hpp  heteronym_context.hpp  ipa_postprocess.hpp  ipa_symbols.hpp  json_config.hpp  moonshine_g2p.hpp  moonshine_onnx_g2p.hpp  onnx_g2p_models.hpp  text_normalize.hpp  utf8_utils.hpp
src/: builtin-cpp-data-root.cpp  builtin-cpp-data-root.h  chinese-onnx-g2p.cpp  cmudict_tsv.cpp  constants.h  g2p-word-log.cpp  g2p-word-log.h  g2p_word_log.cpp  heteronym_context.cpp  ipa-postprocess.cpp  ipa-postprocess.h  ipa_postprocess.cpp  japanese-mora-data.inc  japanese-onnx-g2p.cpp  json-config.cpp  json-config.h  json_config.cpp  korean-tok-pos-onnx.cpp  moonshine-g2p-options.h  moonshine-g2p.cpp  moonshine-g2p.h  moonshine-onnx-g2p.cpp  moonshine-tts.cpp  moonshine-tts.h  moonshine_g2p.cpp  moonshine_onnx_g2p.cpp  onnx-g2p-models.cpp  onnx_g2p_models.cpp  piper-tts.cpp  piper-tts.h  rule-based-g2p-factory.cpp  rule-based-g2p-factory.h  rule-based-g2p.h  text-normalize.cpp  text-normalize.h  text_normalize.cpp  utf8-utils.cpp  utf8-utils.h  utf8_utils.cpp
src/lang-specific/: arabic-diac-onnx.cpp  arabic-diac-onnx.h  arabic-ipa.cpp  arabic-ipa.h  arabic.cpp  arabic.h  chinese-numbers.cpp  chinese-numbers.h  chinese-onnx-g2p.cpp  chinese-onnx-g2p.h  chinese-tok-pos-onnx.cpp  chinese-tok-pos-onnx.h  chinese.cpp  chinese.h  cmudict-tsv.cpp  cmudict-tsv.h  dutch.cpp  dutch.h  english-hand-oov.cpp  english-hand-oov.h  english-numbers.cpp  english-numbers.h  english.cpp  english.h  french-compound-map.cpp  french-compound-map.h  french-internal.h  french-oov.cpp  french.cpp  french.h  french_compound_map.cpp  french_compound_map.inc  french_internal.hpp  french_oov.cpp  german.cpp  german.h  heteronym-context.cpp  heteronym-context.h  hindi-numbers.cpp  hindi-numbers.h  (+50 more)
tests/: arabic-rule-g2p-test.cpp  arabic_rule_g2p_ref.py  chinese-rule-g2p-test.cpp  chinese-tok-pos-onnx-test.cpp  chinese_tok_pos_ref.py  cmudict-tsv-test.cpp  cmudict_tsv_test.cpp  dutch-rule-g2p-test.cpp  dutch_g2p_ref.py  dutch_rule_g2p_test.cpp  english-hand-oov-test.cpp  english-rule-g2p-test.cpp  english_g2p_ref.py  french-rule-g2p-test.cpp  french_g2p_ref.py  french_rule_g2p_test.cpp  german-rule-g2p-test.cpp  german_g2p_ref.py  german_rule_g2p_test.cpp  heteronym-context-test.cpp  heteronym_context_test.cpp  hindi-rule-g2p-test.cpp  hindi_g2p_ref.py  ipa-postprocess-test.cpp  ipa_postprocess_test.cpp  italian-rule-g2p-test.cpp  italian_g2p_ref.py  italian_rule_g2p_test.cpp  japanese-onnx-g2p-test.cpp  japanese-tok-pos-onnx-test.cpp  japanese_onnx_g2p_ref.py  japanese_tok_pos_ref.py  json-config-test.cpp  json_config_test.cpp  korean-rule-g2p-test.cpp  korean-tok-pos-onnx-test.cpp  korean_tok_pos_ref.py  onnx-g2p-smoke-test.cpp  onnx_g2p_smoke_test.cpp  portuguese-rule-g2p-test.cpp  (+19 more)
tools/: arabic-rule-g2p-cli.cpp  chinese-rule-g2p-cli.cpp  dutch-g2p-batch-cli.cpp  dutch-rule-g2p-cli.cpp  dutch_g2p_batch_cli.cpp  dutch_rule_g2p_cli.cpp  french-g2p-batch-cli.cpp  french_g2p_batch_cli.cpp  german-rule-g2p-cli.cpp  german_rule_g2p_cli.cpp  hindi-rule-g2p-cli.cpp  italian-rule-g2p-cli.cpp  italian_rule_g2p_cli.cpp  japanese-onnx-g2p-cli.cpp  korean-rule-g2p-cli.cpp  moonshine-g2p-cli.cpp  moonshine-tts-cli.cpp  moonshine_g2p_cli.cpp  moonshine_onnx_g2p_cli.cpp  piper-ipa-normalize-cli.cpp  piper-phoneme-infer-cli.cpp  portuguese-rule-g2p-cli.cpp  portuguese_rule_g2p_cli.cpp  spanish_rule_g2p_cli.cpp  vietnamese-rule-g2p-cli.cpp
(+221 files in other folders)
